refactor: update cart operations to use customerId instead of cartId for improved user-centric management FOR CLEAR and view cart
