# src/modules/cartManagement/cart.routes.ts
@@ -7,8 +7,8 @@ const cartController = new CartController();
 // POST   /api/v1/cart/add
 router.post('/add', cartController.addToCart);
 
-// GET    /api/v1/cart/:cartId
-router.get('/:cartId', cartController.viewCart);
+// GET    /api/v1/cart/customer/:customerId
+router.get('/customer/:customerId', cartController.viewCart);
 
 // PUT    /api/v1/cart/modify/:cartId  — update item quantity
 router.put('/modify/:cartId', cartController.updateQuantity)
@@ -16,7 +16,7 @@ router.put('/modify/:cartId', cartController.updateQuantity)
 // DELETE   /api/v1/cart/modify/:cartId  — delete cart item
 router.delete('/modify/:cartId', cartController.deleteCartItem)
 
-// DELETE /api/v1/cart/:cartId  — clear entire cart
-router.delete('/:cartId', cartController.clearCart);
+// DELETE /api/v1/cart/clear/:customerId  — clear entire cart
+router.delete('/clear/:customerId', cartController.clearCart);
 
 export { router as cartRouter };
